--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.5.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll-up-btn": "^1.0.4",
     "redux": "^4.1.1",
     "styled-components": "^5.3.0",
+    "tsparticles": "^1.34.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
